# ClippingLoops

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
